--- a/src/App.css
+++ b/src/App.css
@@ -183,8 +183,23 @@ body {
 }
 
 
+.desktop-view {
+  display: none;
+}
 
 
+
+
+
+
+
+
+
+
+
+
+
+/* for mobile */
 @media screen and (max-width: 425px) {
   .desktop-view {
     display: none;
@@ -192,10 +207,11 @@ body {
 
   .Mobile-view {
     display: block;
+    position: relative;
   }
 
   .first-page {
-    height: 892px;
+    height: 992px;
     width: 375px;
     left: 0px;
     top: 0px;
@@ -210,8 +226,9 @@ body {
     left: 532px;
     top: 0px;
     border-radius: 275px;
-  
+
   }
+
   .twitterusername {
     /* //styleName: Text xl/Bold; */
     font-family: Text xl/Bold;
@@ -220,14 +237,15 @@ body {
     line-height: 30px;
     letter-spacing: 0em;
     text-align: center;
-  
+
   }
-  
+
   .picxusername {
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
   .avatar {
     height: 40px;
     width: 40px;
@@ -245,13 +263,14 @@ body {
     align-items: center;
     flex-direction: column;
     gap: 24px;
-  
+
   }
-  
+
   .link {
     margin-top: 20px;
-  
+
   }
+
   .links {
     height: 68px;
     width: 343px;
@@ -269,4 +288,80 @@ body {
     color: rgba(16, 24, 40, 1);
     text-decoration: none;
   }
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 24px;
+    width: 375px;
+    /* left: 112px; */
+    top: 862px;
+    border-radius: 0px;
+    padding: 24px 0px 24px 0px;
+    margin-top: 20px;
+  }
+
+
+
+
+
+
+
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    padding: 0px 0px;
+    gap: 14px;
+
+    /* position: absolute; */
+    width: 375px;
+    height: 160px;
+    left: 0px;
+    top: 998px;
+  }
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    padding: 10px 0px 0px;
+    gap: 12px;
+    /* width: 1216px;
+  height: 64px; */
+  }
+
+
+  .middle {
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    /* align-items: center; */
+    padding: 0px 0px;
+    gap: 32px;
+
+    width: 375px;
+    height: 64px;
+  }
+
+  .vector1 {
+    height: 18.552810668945312px;
+    width: 138.7725830078125px;
+    left: 1.018310546875px;
+    top: 5.237060546875px;
+    border-radius: 0px;
+
+  }
+
+  .vector2 {
+    height: 24px;
+    width: 99.09677124023438px;
+    left: 0px;
+    top: 108px;
+    border-radius: 0px;
+
+  }
+
 }
