Changed share icon

--- a/src/App.css
+++ b/src/App.css
@@ -216,7 +216,7 @@ body {
     left: 0px;
     top: 0px;
     border-radius: 0px;
-    padding: 64px 0px 32px 0px;
+    padding: 14px 0px 32px 0px;
     background: rgba(255, 255, 255, 1);
   }
 
@@ -362,6 +362,13 @@ body {
     top: 108px;
     border-radius: 0px;
 
+  }
+  .share-avatar {
+    display: flex;
+    align-items: flex-end;
+    justify-content: right;
+    margin-right: -300px;
+    /* margin-top: 20px; */
   }
 
 }
